@@ -2,41 +2,45 @@ package software.kosiv.pizzaflow.service;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
+import software.kosiv.pizzaflow.event.CookChangeStateEvent;
+import software.kosiv.pizzaflow.event.DishPreparationCompletedEvent;
+import software.kosiv.pizzaflow.event.DishPreparationStartedEvent;
 import software.kosiv.pizzaflow.model.*;
 
-import java.util.ArrayList;
-import java.util.Deque;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static software.kosiv.pizzaflow.generator.CookGenerator.generate;
 
 @Service
-public class CookService {
+public class CookService implements IDishPreparationEventListener {
+    private final ApplicationEventPublisher eventPublisher;
+    private final Logger logger = LoggerFactory.getLogger(CookService.class);
+
     private final ScheduledExecutorService scheduledExecutorService;
     private ExecutorService executorService = Executors.newSingleThreadExecutor();
-
-    private final Deque<Order> orderQueue;
-    private List<Cook> cooks = new ArrayList<>();
-
-    private final Logger logger = LoggerFactory.getLogger(CookService.class);
     private final AtomicBoolean isPaused = new AtomicBoolean(false);
 
-    public CookService() {
-        this.orderQueue = new LinkedBlockingDeque<>(1000);
+    private final Deque<Order> orderDeque;
+    private List<Cook> cooks = new ArrayList<>();
+
+    public CookService(ApplicationEventPublisher eventPublisher) {
+        this.eventPublisher = eventPublisher;
+        this.orderDeque = new LinkedBlockingDeque<>(1000);
         this.scheduledExecutorService = Executors.newSingleThreadScheduledExecutor();
         scheduledExecutorService.scheduleAtFixedRate(this::checkWaitingQueue, 0, 1, TimeUnit.SECONDS);
     }
 
     public void acceptOrder(Order order) {
-        orderQueue.add(order);
+        order.getOrderItems().forEach(orderItem -> orderItem.getDish().subscribe(this));
+        orderDeque.add(order);
     }
 
     public void setCookCount(int count) {
-        this.cooks = List.copyOf(generate(count, new ArrayList<>(Pizza.PizzaState.getPreparationSteps())));
+        this.cooks = List.copyOf(generate(count, Arrays.asList( Pizza.PizzaState.values())));
         this.executorService = Executors.newFixedThreadPool(count);
     }
 
@@ -62,13 +66,16 @@ public class CookService {
             return;
         }
 
+        CookStatus previousStatus = cook.getStatus();
         cook.setPaused();
+        eventPublisher.publishEvent(new CookChangeStateEvent(this, cook, previousStatus));
     }
 
     public void resumeCook(UUID id) {
         Cook cook = findCookById(id);
         if (cook != null) {
             cook.setFree();
+            eventPublisher.publishEvent(new CookChangeStateEvent(this, cook, CookStatus.PAUSED));
         }
     }
 
@@ -76,6 +83,16 @@ public class CookService {
         for (Cook cook : cooks) {
             cook.setStrategy(strategy.clone());
         }
+    }
+
+    @Override
+    public void onDishPreparationStartedEvent(DishPreparationStartedEvent event) {
+        eventPublisher.publishEvent(event);
+    }
+
+    @Override
+    public void onDishPreparationCompletedEvent(DishPreparationCompletedEvent event) {
+        eventPublisher.publishEvent(event);
     }
 
     private Cook findCookById(UUID id) {
@@ -86,7 +103,7 @@ public class CookService {
     }
 
     private void checkWaitingQueue() {
-        if (orderQueue.isEmpty() || isPaused.get()) {
+        if (orderDeque.isEmpty() || isPaused.get()) {
             return;
         }
 
@@ -110,7 +127,7 @@ public class CookService {
                              .findFirst()
                              .orElseThrow();
 
-        orderQueue.remove(order);
+        orderDeque.remove(order);
         processOrderItem(cook, orderItem);
     }
 
@@ -125,8 +142,12 @@ public class CookService {
             executorService.execute(() ->
             {
                 assignOrderItemToCook(cook, orderItem);
-                if (orderItem.getOrder().getCompletedAt() == null) {
-                    orderQueue.add(orderItem.getOrder());
+                Order order = orderItem.getOrder();
+                if (order.getCompletedAt() == null) {
+                    orderDeque.add(orderItem.getOrder());
+                }
+                else {
+                    order.getOrderItems().forEach(item -> item.getDish().unsubscribe(this));
                 }
             });
         }
@@ -134,8 +155,10 @@ public class CookService {
 
     private void assignOrderItemToCook(Cook cook, OrderItem orderItem) {
         cook.setBusy();
+        eventPublisher.publishEvent(new CookChangeStateEvent(this, cook, CookStatus.FREE));
         cook.prepareDish(orderItem);
         cook.setFree();
+        eventPublisher.publishEvent(new CookChangeStateEvent(this, cook, CookStatus.BUSY));
     }
 
     private List<Cook> findAllAvailableCooks() {
@@ -145,7 +168,7 @@ public class CookService {
     }
 
     private Order findAvailibleOrder(Cook cook) {
-        return orderQueue.stream()
+        return orderDeque.stream()
                          .filter(order -> order.getUncompletedOrderItems().stream()
                                                .anyMatch(orderItem -> cook.canCook(orderItem.getDish())
                                                                       && !orderItem.isBeingPrepared()))
